--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "devDependencies": {},
     "dependencies": {
+        "chalk": "^4.0.0",
         "chokidar": "^3.3.1",
         "fancy-log": "^1.3.3",
         "form-data": "^3.0.0",
