--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "chalk": "^4.0.0",
         "chokidar": "^3.3.1",
+        "enquirer": "^2.3.6",
+        "es6-promise-pool": "^2.5.0",
         "fancy-log": "^1.3.3",
         "form-data": "^3.0.0",
         "request": "^2.88.2",
