--- a/package.json
+++ b/package.json
@@ -1,27 +1,41 @@
 {
-    "name": "outofbox-skins-sync",
-    "version": "1.0.0",
-    "description": "Sync local dir with skins",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "bin": {
-        "outofbox-skins-sync": "./bin/outofbox-skins-sync.js"
-    },
-    "preferGlobal": true,
-    "author": "wiistriker",
-    "license": "MIT",
-    "devDependencies": {},
-    "dependencies": {
-        "chalk": "^4.0.0",
-        "chokidar": "^3.3.1",
-        "enquirer": "^2.3.6",
-        "es6-promise-pool": "^2.5.0",
-        "fancy-log": "^1.3.3",
-        "form-data": "^3.0.0",
-        "request": "^2.88.2",
-        "request-promise": "^4.2.5",
-        "yaml": "^1.8.3"
-    }
+  "name": "outofbox-skins-sync",
+  "version": "1.0.0",
+  "description": "Sync local dir with skins",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "outofbox-skins-sync": "bin/outofbox-skins-sync.js"
+  },
+  "preferGlobal": true,
+  "author": "wiistriker",
+  "license": "MIT",
+  "devDependencies": {},
+  "dependencies": {
+    "chalk": "^4.0.0",
+    "chokidar": "^3.3.1",
+    "enquirer": "^2.3.6",
+    "es6-promise-pool": "^2.5.0",
+    "fancy-log": "^1.3.3",
+    "form-data": "^3.0.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
+    "yaml": "^1.8.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JustCommunication-ru/outofbox-skins-sync.git"
+  },
+  "keywords": [
+    "outofbox",
+    "outofbox.ru",
+    "skins",
+    "sync"
+  ],
+  "bugs": {
+    "url": "https://github.com/JustCommunication-ru/outofbox-skins-sync/issues"
+  },
+  "homepage": "https://github.com/JustCommunication-ru/outofbox-skins-sync#readme"
 }
