--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "outofbox-skins-sync",
-  "version": "1.0.0",
-  "description": "Sync local dir with skins",
+  "version": "1.0.1",
+  "description": "Sync local dir with outofbox.ru skins",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
